Changelog for mk-parallel-restore:

2008-01-05: version 1.0.3

   * Made suffixes for time options optional (bug #1858696).
   * --ignoretables was ignored.

2007-12-16: version 1.0.2

   * Updated common code.

2007-12-07: version 1.0.1

   * Updated common code.

2007-11-12: version 1.0.0

   * Removed the --sql option, as sort order is implied when --tab is given.
   * Added code to load .trg files (triggers) and load 00_views files.
   * Print out files that are not loaded.

2007-11-04: version 0.9.1

   * Made command-line help easier to use.
   * Optimized the calls to CREATE DATABASE with the --createdb argument.
   * Removed the dependency on Term::ReadKey.
   * CHARACTER SET was added to LOAD DATA INFILE even before MySQL 5.0.38.
   * Replaced some code with modules that are unit-tested.
   * Fixed documentation formatting errors.

2007-10-15: version 0.9.0

   * Initial release.